# ttk_info_bot

./: .gitignore  main.py  pyproject.toml  utils.py
core/: config.py
filters/: network_parameters_filters.py
keyboards/: common_keyboards.py
routers/: __init__.py  base_router.py  base_routers.py  network_parameters_router.py  states.py
