[tool.poetry]
name = "ttk-info-bot"
version = "0.1.0"
description = ""
authors = ["anna putilovskaya <putilovskayaam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.15.0"
pydantic-settings = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
